<resources>
    <string name="app_name">PathoGold</string>
    <string name="app_link">https://play.google.com/store/apps/details?id=com.bms.pathogold_bms</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="mask_password">**********</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="laboratory">Lab/Admin</string>
    <string name="doctor">Doctor</string>
    <string name="consultant_doctor">Cons. Dr</string>
    <string name="reference_doctor">Ref. Dr</string>
    <string name="collection_center">Collection Center</string>
    <string name="patient">Patients</string>
    <string name="super_admin">Super Admin</string>
    <string name="admin">Admin</string>
    <string name="support">Support</string>
    <string name="phlebotomist">Phlebotomist</string>
    <string name="birlamedisoft_pvt_ltd">Birlamedisoft Pvt. Ltd.</string>
    <string name="wel_come_to_">Wel-Come to</string>
    <string name="your_current_lab">Your Current Lab:- </string>
    <string name="view_slot">View Available Slot </string>
    <string name="patient_list">Patients List </string>
    <string name="update_profile">Update Profile </string>
    <string name="view_image">View Image </string>
    <string name="permission_denied">Permission Denied.</string>
    <string name="my_profile">My Profile</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="view_appointment">View Appointment</string>
    <string name="approve_appointment">Approved Appointment</string>
    <string name="view_report_details">View Reports Details</string>
    <string name="vital_history">Vital/History</string>
    <string name="image_upload">File Upload</string>
    <string name="view_file">View File</string>
    <string name="video_conference">Video Conference</string>
    <string name="patient_registration">Patient Registration</string>
    <string name="report_download">Report Download</string>
    <string name="my_distance">My Distance</string>
    <string name="view_treatment">View Treatement</string>
    <string name="prescription">Prescription</string>
    <string name="old_prescription">Previous Prescription</string>
    <string name="accepted_appointment">Accepted Appointment</string>
    <string name="pending_appointment">Pending Appointment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="search_by_name_date_mobile_number">Search by name, date, mobile</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="view">View</string>
    <string name="view_vaccination">View Vaccination</string>
    <string name="booking_for">Booking for</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="consultation">Consultation</string>
    <string name="get_slots">Get Slots</string>
    <string name="book_slot">Book Slot</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="no_slots_found">No Slots Are Available!</string>
    <string name="mobile_number">Mobile No (10 digit)</string>
    <string name="get">Get</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age:</string>
    <string name="remark">Remark</string>
    <string name="submit">Submit</string>
    <string name="contact_information">Contact Information:</string>
    <string name="select">Select</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="dob">DOB:</string>
    <string name="lab_name">Lab Name:</string>
    <string name="mobile">Mob:</string>
    <string name="update">Update</string>
    <string name="profile_details">Profile Details</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="test_name">Test Name</string>
    <string name="day">Day</string>
    <string name="time_slot">Time Slot:</string>
    <string name="price">Price</string>
    <string name="status">Status:</string>
    <string name="accepted">Accepted</string>
    <string name="cancel">Cancel</string>
    <string name="reschedule">Reschedule</string>
    <string name="search_phelobo">Search Phelbo</string>
    <string name="no_phlebo_found">No Phelbo Found</string>
    <string name="search_by_phelobo"><![CDATA[Search by name or pno....]]></string>
    <string name="complete">Complete</string>
    <string name="no_appointment_found">No Appointment Found!</string>
    <string name="you_don_have_authority_to_login">You don\'t have authority to login…Please try another login!</string>
    <string name="view_upload">View Upload</string>
    <string name="patient_name">Patient Name:</string>
    <string name="search_patient">Search Patients</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="select_date">Select Date</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="select_type_of_image">Select type of image</string>
    <string name="enter_location_of_image">Enter location of image</string>
    <string name="enter_remark">Enter remark</string>
    <string name="capture">Capture</string>
    <string name="enter_patient_name">Enter Patient Name</string>
    <string name="no_selection">No Selection</string>
    <string name="enter_test_name_code">Enter Test Name/Code</string>
    <string name="upload_all_photos">Upload All Photos</string>
    <string name="record_audio">Record Audio</string>
    <string name="submit_audio">Submit Audio</string>
    <string name="inital">Inital</string>
    <string name="select_test_profile">Select Test/Profile</string>
    <string name="select_consultant_doctor">Select Consultant Doctor</string>
    <string name="search_by_testcode_name">Search by TestCode/Name</string>
    <string name="logout">Logout</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="no_patient_found">No Patients Found</string>
    <string name="sex">Sex</string>
    <string name="vital">Vitals</string>
    <string name="upload">Image Upload</string>
    <string name="video_call">Video Call</string>
    <string name="call_to_dr">Call To Dr.</string>
    <string name="report">Reports</string>
    <string name="not_available_for_video_call">Not available for video call!</string>
    <string name="prescription_details">Prescription Details</string>
    <string name="followup_date">FollowUp Date</string>
    <string name="doctor_advice">Doctor Advice</string>
    <string name="frequency">Frequency</string>
    <string name="qty">Qty</string>
    <string name="add_prescription">Add Prescription</string>
    <string name="drug_name">Drug Name</string>
    <string name="dose">Dose</string>
    <string name="action">Action</string>
    <string name="notes">Notes</string>
    <string name="delete">Delete</string>
    <string name="spo2_details">SPO2 Details</string>
    <string name="pulse">Pulse</string>
    <string name="spo2">SPO2</string>
    <string name="in_bpm">in (bpm)</string>
    <string name="in">in (%)</string>
    <string name="systolic_bp">Systolic BP</string>
    <string name="systolic_bp_mmhg">Systolic BP (mmHG)</string>
    <string name="diastolic_bp">Diastolic BP</string>
    <string name="diastolic_mmhg">Diastolic (mmHG)</string>
    <string name="bp_details">BP Details</string>
    <string name="temp_resp"><![CDATA[Temp. & Resp]]></string>
    <string name="in_f">in ° F</string>
    <string name="temp_f">Temp (°F)</string>
    <string name="respiration">Respiration</string>
    <string name="bmi">BMI</string>
    <string name="height">Height</string>
    <string name="ht_in_cms">HT(in cms)</string>
    <string name="wt_kg">Wt (kg)</string>
    <string name="wt">Wt</string>
    <string name="blood_group">Blood Group</string>
    <string name="blood_sugar">Blood Sugar</string>
    <string name="add_surgery">Add Surgery</string>
    <string name="select_surgery">Select Surgery</string>
    <string name="mm_yyyy">mm/yyyy</string>
    <string name="past_medical_history">Past Medical History</string>
    <string name="select_environmental_allergy">---Select Environmental Allergy---</string>
    <string name="select_food_allergy">---Select Food Allergy---</string>
    <string name="save">Save</string>
    <string name="select_drug_allergy">---Select Drug Allergy---</string>
    <string name="search_surgery">Search surgery</string>
    <string name="search_by_allergy">Search by allergy</string>
    <string name="set_to_date_and_from_date">Set to date and from date</string>
    <string name="to_date">To Date</string>
    <string name="select_todate">Select ToDate</string>
    <string name="from_date">From Date</string>
    <string name="select_fromdate">Select FromDate</string>
    <string name="set_from_date_and_from_date">Set from date and to date</string>
    <string name="view_reports">View Reports</string>
    <string name="view_report">View Report</string>
    <string name="invoice_report">Invoice Report</string>
    <string name="view_old_prescription">View Prev. Prescription</string>
    <string name="end_job">End Job</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time</string>
    <string name="total_distance">Total Distance</string>
    <string name="todays_km_cover">Todays km/ Cover</string>
    <string name="old_distance_covered">Old distance covered</string>
    <string name="completed">Completed</string>
    <string name="home">Home</string>
    <string name="feedback">Feedback</string>
    <string name="appointment">Appointment</string>
    <string name="about_us">About Us</string>
    <string name="all_patient">All Patients</string>
    <string name="app">App.</string>
    <string name="no_patient_found_today">No Patients Found Today!</string>
    <string name="book">Book</string>
    <string name="view_details">View Details</string>
    <string name="today_s_patient">Today\'s Patients</string>
    <string name="value">VALUE</string>
    <string name="normal_range">NORMAL RANGE</string>
    <string name="add_view_vaccination">Add/View Vaccination</string>
    <string name="search_by_vaccination_name_age">Search by vaccination name, age</string>
    <string name="add_vaccination">Add Vaccination</string>
    <string name="update_vaccination">Update Vaccination</string>
    <string name="vaccination_name">Vaccination Name</string>
    <string name="vaccination">Vaccination</string>
    <string name="show_details">Show Details</string>
    <string name="enter_details">Enter Details</string>
    <string name="not_vaccinated">Not Vaccinated</string>
    <string name="chats">Chats</string>
    <string name="daily_cash_register">Daily Cash Register</string>
    <string name="please_select_lab">Please Select Lab…</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="detailed_statement">Detailed Statement</string>
    <string name="or_select_a_custom_date_of_your_choice">Or select a custom date of your choice</string>
    <string name="for_which_period_do_you_need_a_statement">For which period do you need a statement?</string>
    <string name="last_month">Last    Month</string>
    <string name="last_3_months">Last 3 Months</string>
    <string name="last_6_months">Last 6 months</string>
    <string name="last_1_year">Last 1 year</string>
    <string name="services">Services</string>
</resources>