<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ContactsFragment">

    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/editext_background"
        android:drawableStart="@drawable/ic_baseline_youtube_searched_for_24"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/search"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="20"
        android:paddingStart="@dimen/_18sdp"
        android:paddingEnd="@dimen/_18sdp"
        android:textSize="@dimen/_11ssp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/radio_background"
        android:checkedButton="@id/rb_patient"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:buttonTint="@color/teal_700"
            android:text="@string/patient"
            android:textSize="@dimen/_9ssp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_diagnostics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:buttonTint="@color/teal_700"
            android:text="@string/diagnostics"
            android:textSize="@dimen/_9ssp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_consultation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:buttonTint="@color/teal_700"
            android:text="@string/consultation"
            android:textSize="@dimen/_9ssp"
            android:textStyle="bold" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/ll_patient_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:boxBackgroundColor="@color/card_background"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_date"
            app:layout_constraintTop_toTopOf="parent">
            <!--app:startIconDrawable="@drawable/ic_user"-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"
                android:focusableInTouchMode="true"
                android:hint="@string/select_date"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <!-- TODO: Update blank fragment layout -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_patient_diagnos_consult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_4sdp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_no_data_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/no_data_found"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>