<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".fragment.DailyCashGraphFragment">

    <LinearLayout
        android:id="@+id/ll_radio_operation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:background="@drawable/radio_background_patient"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_last_7_days_transaction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_weight="1"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/_10sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_12sdp"
            android:focusable="true">

            <TextView
                android:id="@+id/tv_last_7_days_transaction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:gravity="center"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="@string/last_7_days"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/_10sdp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_detailed_statement"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_weight="1"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/_10sdp"
            app:cardBackgroundColor="@color/purple_700"
            app:cardCornerRadius="@dimen/_12sdp"
            android:focusable="true">

            <TextView
                android:id="@+id/tv_detailed_statement"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:gravity="center"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="@string/detailed_statement"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nested_constraint2_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/vital_background">

        <LinearLayout
            android:id="@+id/ll_search_labname_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:ellipsize="end"
                android:fontFamily="@font/sourcesanspro_regular"
                android:gravity="left"
                android:singleLine="true"
                android:text="@string/please_select_lab"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_select_lab"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/editext_background"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:drawablePadding="@dimen/_10sdp"
                android:editable="false"
                android:hint="@string/please_select_lab"
                android:paddingStart="@dimen/_18sdp"
                android:paddingEnd="@dimen/_18sdp"
                android:textColor="@color/purple_700"
                android:textColorHint="@color/purple_700"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nested_constraint2_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nested_constraint2_1">

        <TextView
            android:id="@+id/tv_for_which_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/for_which_period_do_you_need_a_statement"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="@+id/tv_or_select_custom_date"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_or_select_custom_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/or_select_a_custom_date_of_your_choice"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="@+id/et_from_date"
            app:layout_constraintTop_toBottomOf="@+id/rg_select_period1"
            android:layout_marginTop="@dimen/_3sdp"/>

        <EditText
            android:id="@+id/et_from_date"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/editext_background_without_corner"
            android:drawableEnd="@drawable/ic_baseline_calendar_today_24"
            android:editable="false"
            android:focusable="true"
            android:fontFamily="@font/sourcesanspro_regular"
            android:gravity="center"
            android:hint="@string/select_fromdate"
            android:imeOptions="actionNone"
            android:maxLength="10"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@+id/btn_submit"
            app:layout_constraintEnd_toStartOf="@+id/et_to_date"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_or_select_custom_date"
            app:layout_goneMarginStart="@dimen/_10sdp" />

        <EditText
            android:id="@+id/et_to_date"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/editext_background_without_corner"
            android:drawableEnd="@drawable/ic_baseline_calendar_today_24"
            android:editable="false"
            android:focusable="true"
            android:fontFamily="@font/sourcesanspro_regular"
            android:gravity="center"
            android:hint="@string/select_todate"
            android:maxLength="10"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@+id/btn_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/et_from_date"
            app:layout_goneMarginStart="@dimen/_10sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/purple_700"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.bms.pathogold_bms.utility.RelativeRadioGroup
            android:id="@+id/rg_select_period1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tv_for_which_period">

            <RadioButton
                android:id="@+id/rb_last_month"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_20sdp"
                android:buttonTint="@color/purple_700"
                android:fontFamily="@font/sourcesanspro_regular"
                android:text="@string/last_month"
                android:checked="true"
                android:textSize="@dimen/_11ssp" />

            <RadioButton
                android:id="@+id/rb_last_3_months"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:buttonTint="@color/purple_700"
                android:fontFamily="@font/sourcesanspro_regular"
                android:text="@string/last_3_months"
                android:layout_toEndOf="@id/rb_last_month"
                android:textSize="@dimen/_11ssp" />

            <RadioButton
                android:id="@+id/rb_last_6_months"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_20sdp"
                android:text="@string/last_6_months"
                android:buttonTint="@color/purple_700"
                android:textSize="@dimen/_11ssp"
                android:layout_below="@id/rb_last_month"
                android:fontFamily="@font/sourcesanspro_regular"/>

            <RadioButton
                android:id="@+id/rb_last_1_year"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:text="@string/last_1_year"
                android:buttonTint="@color/purple_700"
                android:textSize="@dimen/_11ssp"
                android:layout_below="@id/rb_last_3_months"
                android:layout_toEndOf="@id/rb_last_6_months"
                android:fontFamily="@font/sourcesanspro_regular"/>

        </com.bms.pathogold_bms.utility.RelativeRadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_5sdp"
        android:id="@+id/rv_graph"/>

    <TextView
        android:id="@+id/tv_no_data_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@color/purple_700"
        android:text="@string/no_data_found"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:visibility="gone"/>
</androidx.appcompat.widget.LinearLayoutCompat>